# project-graph

./: .all-contributorsrc  .browserslistrc  .env.example  .fuck-csdn.txt  .gitignore  .lintstagedrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  bun.lockb  camera.py  config.xlings  eslint.config.js  index.html  install.sh  main.py  node_manager.py  package.json  package.py  pnpm-lock.yaml  pnpm-workspace.yaml  project-graph.spec  pyinstaller_build.bat  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.docs.json  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts
.cursor/rules/: project-structure.mdc
.fitten/rules/: class和namespace转换.md  project_background.md  开发注意.md
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  no-issues.yml
.github/scripts/: generate-changelog.mjs  generate-changelog.sh  generate-pkgbuild.mjs  set-tauri-features.mjs  set-version.mjs
.github/workflows/: build.yml  deploy-docs.yml  feature-preview.yml  nightly.yml  package.yml  publish.yml  release.yml  render-docs-svg.yml
.husky/: pre-commit
app/: .browserslistrc  README.md  components.json  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
app/scripts/: tauri_build.js
app/src/: App.tsx  cli.tsx  index.css  main.tsx  router.ts  state.tsx  theme.pcss  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/cmd/: device.rs  fs.rs  mod.rs
app/tests/: deco.test.tsx  jsonDump.test.tsx  limitLengthQueue.test.tsx  lruCache.test.tsx  monoStack.test.tsx  plugin.test.tsx  relativePathToAbsolute.test.tsx  validUrl.test.tsx
assets/: assets.py
changelogs/: 1.0.0.md  1.1.0.md  1.2.0.md
core/: app_dir.py  camera.py  node_manager.py  recent_file_manager.py
core/data_struct/: arrow.py  circle.py  curve.py  line.py  number_vector.py  rectangle.py  text.py
core/effect/: effect.py  effect_concrete.py  effect_manager.py
core/entity/: entity.py  entity_node.py
core/paint/: paint_elements.py  paint_utils.py  paintables.py  painters.py
core/tools/: file_tools.py  string_tools.py
coserver/: package.json  tsconfig.json
coserver/src/: index.ts
data_struct/: line.py  number_vector.py  rectangle.py  text.py
doc/: ProjectGraph开发进程图.json  ProjectGraph继承体系.json
docs/: .gitignore  CONTRIBUTING.md  Project Graph v2.json  Project Graph v2.json.2024-12-22_18-10-10.backup  ProjectGraph开发进程图.json  ProjectGraph继承体系.json  contributing.md  contributors.md  design.md  donate.md  faq.md  index.md  installation.md  json-format.md  mdx-components.tsx  middleware.ts  next.config.mjs  package.json  privacy-policy.md  privacy.md  roadmap.md  source.config.ts  terms.md  tsconfig.json  why-rewriting.md  wrangler.jsonc
docs-pg/: CublicCatmullRomSpline.md  Project Graph v2.json  ProjectGraph决策日志.json  ProjectGraph开发进程图.json  ProjectGraph继承体系.json  ProjectGraph项目架构.json  REDME_FOR_AI.md  issue分类.json  笔迹涂鸦功能设计.md
docs/.vitepress/: config.ts
docs/app/: global.css  layout.config.tsx  layout.tsx  octo.tsx  theme-provider.tsx
docs/en/: faq.md  index.md  installation.md
docs/features/: ai.md  camera.md  cli.md  compute-engine.md  connect-point.md  edge.md  export.md  image.md  link-node.md  node.md  quick-action.md  section.md  split-merge.md  tree.md  url-node.md
docs/lib/: getLLMText.ts  i18n.ts  source.ts
docs/src/: index.md  terms.md
docs/zh/: contributing.md  donate.md  index.md  installation.md  terms.md
entity/: entity.py  entity_node.py
lib/: README.md
paint/: paint_elements.py  paint_utils.py  paintables.py  painters.py
scripts/: lines.bat
sounds/: README.md
src/: cli.tsx  index.css  index.pcss  main.js  main.tsx  router.ts  run_project.py  state.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Project Graph  tauri.conf.json
src-tauri/icons/: icon.icns
tests/: mod.test.tsx  parseMarkdownToJSON.test.tsx  vector.test.tsx
tools/: string_tools.py
utils/: class2namespace.ts  generate-service-docs.sh  relative2alias.ts
(+1344 files in other folders)
