[project]
name = "project-graph"
version = "0.1.0"
description = "Project Graph"
authors = [{ name = "LiRenTech", email = "liren@zty012.de" }]
dependencies = [
    "PyQt5-sip>=12.15.0",
    "appdirs>=1.4.4",
    "PyQt5>=5.15.11",
]
requires-python = "<3.14,>=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

[project.gui-scripts]
# 使用pipx安装这个包后，可以用这个命令运行程序
project-graph = "project_graph.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']

[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = { call = "project_graph.__main__:main" }
package = { call = "package:main" }

[tool.pdm.dev-dependencies]
package = ["pyinstaller>=6.10.0"]
