[project]
name = "project-graph"
version = "0.1.0"
description = "Project Graph"
authors = [{ name = "LiRenTech", email = "liren@zty012.de" }]
dependencies = [
    "PyQt5-sip>=12.15.0",
    "appdirs>=1.4.4",
    "PyQt5>=5.15.11",
    "python-dotenv>=1.0.1",
    "jsonfixer>=0.2.2",

    # 豆包AI 与依赖
    "volcengine-python-sdk>=1.0.100",
    "httpx>=0.23.0",
    "typing-extensions>=4.12.2",
    "pydantic>=1.9.0",
    # openai 与依赖
    "openai>=1.44.0",
]
requires-python = "<3.13,>=3.12"
readme = "README.md"
license = { text = "GPL-3.0-only" }

[project.gui-scripts]
# 使用pipx安装这个包后，可以用这个命令运行程序
project-graph = "project_graph.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']

[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = { call = "project_graph.__main__:main" }
package = { call = "package:main" }

[tool.pdm.dev-dependencies]
package = ["pyinstaller>=6.10.0"]
macos = ["vext-pyqt5>=0.7.4"]
