[package]
name = "project-graph"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "project_graph_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = ["macos-private-api"] }
tauri-plugin-shell = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2.3.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-store = "2.3.0"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2.3.0"
base64 = "0.22.1"
tauri-plugin-process = "2"
tauri-plugin-fs = "2.4.0"
tauri-plugin-devtools = "2.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
